Added TimeUtils, Plugin commands, updated other utils and data holders